Remove post build events in all csproj files
Change dll locations in build.xml

Create lib directory before moving there Chrome driver

Copy dlls and test data to lib/UnitTests

Change verbosity of MSBuild to normal

Fix example providers project references

Remove Injections property from build script

Do not copy tests config file in build script

Create BuildLogs dir during build if needed

Fix folders creation in build script

Update nuspec files

Copy all dlls, xmls, and pdbs to UnitTests folder

Change dlls folders in build.xml

Copy config files to the target folder for tests

Copy unit tests files to tests target folder

Copy tests app.config to tests target directory with different name

Copy tests integration points config file to the proper location

Copy oi files to proper test directory after build

Log testDir in UI tests

Fix GoesToWorkspace UI test

Fix setting Relativity version in Jenkinsfile

Remove timeout in the build stage in Jenkinsfile

Clean files on PolandBuild node after executing stages or failing

(cherry picked from commit 6074594cd38129b9e7935335b3fcf17ac18cb983)
Signed-off-by: Michal Grygierzec <michal.grygierzec@relativity.com>

--- a/DevelopmentScripts/NuGet/IntegrationPoints.Contracts.nuspec
+++ b/DevelopmentScripts/NuGet/IntegrationPoints.Contracts.nuspec
@@ -15,7 +15,7 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="..\..\lib\kCura.IntegrationPoints.Contracts.dll" target="lib\net462\" />
-    <file src="..\..\lib\kCura.IntegrationPoints.SourceProviderInstaller.dll" target="lib\net462\" />
+    <file src="..\..\lib\UnitTests\kCura.IntegrationPoints.Contracts.dll" target="lib\UnitTests\net462\" />
+    <file src="..\..\lib\UnitTests\kCura.IntegrationPoints.SourceProviderInstaller.dll" target="lib\UnitTests\net462\" />
   </files>
 </package>
