--- a/DevelopmentScripts/NuGet/IntegrationPoints.SDK.nuspec
+++ b/DevelopmentScripts/NuGet/IntegrationPoints.SDK.nuspec
@@ -17,14 +17,14 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="..\..\lib\kCura.IntegrationPoints.Config.dll" target="lib" />
-    <file src="..\..\lib\kCura.IntegrationPoints.Contracts.dll" target="lib" />
-    <file src="..\..\lib\kCura.IntegrationPoints.Core.dll" target="lib" />
-    <file src="..\..\lib\kCura.IntegrationPoints.Core.Contracts.dll" target="lib" />
-    <file src="..\..\lib\kCura.IntegrationPoints.Data.dll" target="lib" />
-    <file src="..\..\lib\kCura.IntegrationPoints.Domain.dll" target="lib" />
-    <file src="..\..\lib\kCura.IntegrationPoints.SourceProviderInstaller.dll" target="lib" />
-    <file src="..\..\lib\kCura.IntegrationPoints.Synchronizers.RDO.dll" target="lib" />
-    <file src="..\..\lib\kCura.ScheduleQueue.Core.dll" target="lib" />
+    <file src="..\..\lib\UnitTests\kCura.IntegrationPoints.Config.dll" target="lib" />
+    <file src="..\..\lib\UnitTests\kCura.IntegrationPoints.Contracts.dll" target="lib" />
+    <file src="..\..\lib\UnitTests\kCura.IntegrationPoints.Core.dll" target="lib" />
+    <file src="..\..\lib\UnitTests\kCura.IntegrationPoints.Core.Contracts.dll" target="lib" />
+    <file src="..\..\lib\UnitTests\kCura.IntegrationPoints.Data.dll" target="lib" />
+    <file src="..\..\lib\UnitTests\kCura.IntegrationPoints.Domain.dll" target="lib" />
+    <file src="..\..\lib\UnitTests\kCura.IntegrationPoints.SourceProviderInstaller.dll" target="lib" />
+    <file src="..\..\lib\UnitTests\kCura.IntegrationPoints.Synchronizers.RDO.dll" target="lib" />
+    <file src="..\..\lib\UnitTests\kCura.ScheduleQueue.Core.dll" target="lib" />
   </files>
 </package>
