--- a/Source/JsonLoader/JsonLoader.csproj
+++ b/Source/JsonLoader/JsonLoader.csproj
@@ -62,13 +62,16 @@
       <HintPath>..\..\packages\kCura.EventHandler\lib\net462\kCura.EventHandler.dll</HintPath>
     </Reference>
     <Reference Include="kCura.IntegrationPoints.Contracts">
-      <HintPath>..\..\lib\kCura.IntegrationPoints.Contracts.dll</HintPath>
+      <HintPath>..\kCura.IntegrationPoints.Contracts\bin\x64\kCura.IntegrationPoints.Contracts.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="kCura.IntegrationPoints.Domain">
-      <HintPath>..\..\lib\kCura.IntegrationPoints.Domain.dll</HintPath>
+    <Reference Include="kCura.IntegrationPoints.Domain, Version=10.1.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\kCura.IntegrationPoints.Domain\bin\x64\kCura.IntegrationPoints.Domain.dll</HintPath>
     </Reference>
-    <Reference Include="kCura.IntegrationPoints.SourceProviderInstaller">
-      <HintPath>..\..\lib\kCura.IntegrationPoints.SourceProviderInstaller.dll</HintPath>
+    <Reference Include="kCura.IntegrationPoints.SourceProviderInstaller, Version=10.1.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\kCura.IntegrationPoints.SourceProviderInstaller\bin\x64\kCura.IntegrationPoints.SourceProviderInstaller.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
