--- a/DevelopmentScripts/build.xml
+++ b/DevelopmentScripts/build.xml
@@ -472,57 +472,57 @@
         <Destination>Applications\RelativityIntegrationPoints.Auto.rap</Destination>
         <ApplicationSchema>ApplicationsXML\application.xml</ApplicationSchema>
         <Assemblies>
-          <Assembly>lib\Castle.Windsor.dll</Assembly>
-          <Assembly>lib\Castle.Core.dll</Assembly>
-          <Assembly>lib\kCura.Apps.Common.Config.dll</Assembly>
-          <Assembly>lib\kCura.Apps.Common.Data.dll</Assembly>
-          <Assembly>lib\kCura.Apps.Common.Utils.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Agent.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Common.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Config.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Contracts.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Core.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Core.Contracts.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Data.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.DocumentTransferProvider.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Domain.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Email.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.EventHandlers.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Management.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.FtpProvider.Parser.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.FtpProvider.Helpers.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.FtpProvider.Connection.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.FtpProvider.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.FilesDestinationProvider.Core.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.ImportProvider.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.ImportProvider.Parser.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Injection.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.LDAPProvider.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Services.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Services.Interfaces.Private.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.SourceProviderInstaller.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Synchronizers.RDO.dll</Assembly>
-          <Assembly>lib\kCura.LongPath.dll</Assembly>
-          <Assembly>lib\kCura.Relativity.Client.dll</Assembly>
-          <Assembly>lib\kCura.Relativity.DataReaderClient.dll</Assembly>
-          <Assembly>lib\kCura.WinEDDS.dll</Assembly>
-          <Assembly>lib\kCura.WinEDDS.TApi.dll</Assembly>
-          <Assembly>lib\kCura.WinEDDS.Core.dll</Assembly>
-          <Assembly>lib\Relativity.DataTransfer.MessageService.dll</Assembly>
-          <Assembly>lib\Relativity.Transfer.Client.Aspera.dll</Assembly>
-          <Assembly>lib\Relativity.Transfer.Client.dll</Assembly>
-          <Assembly>lib\Relativity.Transfer.Client.Core.dll</Assembly>
-          <Assembly>lib\Relativity.Transfer.Client.FileShare.dll</Assembly>
-          <Assembly>lib\Relativity.Transfer.Client.Http.dll</Assembly>
-          <Assembly>lib\FaspManager.dll</Assembly>
-          <Assembly>lib\Polly.dll</Assembly>
-          <Assembly>lib\kCura.ScheduleQueue.AgentBase.dll</Assembly>
-          <Assembly>lib\kCura.ScheduleQueue.Core.dll</Assembly>
-          <Assembly>lib\Newtonsoft.Json.dll</Assembly>
-          <Assembly>lib\Renci.SshNet.dll</Assembly>
-          <Assembly>lib\SystemInterface.dll</Assembly>
-          <Assembly>lib\ZetaLongPaths.dll</Assembly>
-          <Assembly>lib\Relativity.Productions.Services.Interfaces.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\Castle.Windsor.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\Castle.Core.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\kCura.Apps.Common.Config.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\kCura.Apps.Common.Data.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\kCura.Apps.Common.Utils.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Agent\bin\x64\kCura.IntegrationPoints.Agent.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\kCura.IntegrationPoints.Common.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\kCura.IntegrationPoints.Config.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\kCura.IntegrationPoints.Contracts.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\kCura.IntegrationPoints.Core.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\kCura.IntegrationPoints.Core.Contracts.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\kCura.IntegrationPoints.Data.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.DocumentTransferProvider\bin\x64\kCura.IntegrationPoints.DocumentTransferProvider.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\kCura.IntegrationPoints.Domain.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Email\bin\x64\kCura.IntegrationPoints.Email.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.EventHandlers\bin\x64\kCura.IntegrationPoints.EventHandlers.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Management\bin\x64\kCura.IntegrationPoints.Management.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.FtpProvider\bin\x64\kCura.IntegrationPoints.FtpProvider.Parser.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.FtpProvider\bin\x64\kCura.IntegrationPoints.FtpProvider.Helpers.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.FtpProvider\bin\x64\kCura.IntegrationPoints.FtpProvider.Connection.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.FtpProvider\bin\x64\kCura.IntegrationPoints.FtpProvider.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.FilesDestinationProvider.Core\bin\x64\kCura.IntegrationPoints.FilesDestinationProvider.Core.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.ImportProvider\bin\x64\kCura.IntegrationPoints.ImportProvider.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.ImportProvider\bin\x64\kCura.IntegrationPoints.ImportProvider.Parser.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Injection\bin\x64\kCura.IntegrationPoints.Injection.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.LDAPProvider\bin\x64\kCura.IntegrationPoints.LDAPProvider.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Services\bin\x64\kCura.IntegrationPoints.Services.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Services\bin\x64\kCura.IntegrationPoints.Services.Interfaces.Private.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.SourceProviderInstaller\bin\x64\kCura.IntegrationPoints.SourceProviderInstaller.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Synchronizers.RDO\bin\x64\kCura.IntegrationPoints.Synchronizers.RDO.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\kCura.LongPath.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\kCura.Relativity.Client.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\kCura.Relativity.DataReaderClient.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\kCura.WinEDDS.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\kCura.WinEDDS.TApi.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\kCura.WinEDDS.Core.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\Relativity.DataTransfer.MessageService.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\Relativity.Transfer.Client.Aspera.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\Relativity.Transfer.Client.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\Relativity.Transfer.Client.Core.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\Relativity.Transfer.Client.FileShare.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\Relativity.Transfer.Client.Http.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\FaspManager.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\Polly.dll</Assembly>
+          <Assembly>Source\kCura.ScheduleQueue.AgentBase\bin\x64\kCura.ScheduleQueue.AgentBase.dll</Assembly>
+          <Assembly>Source\kCura.ScheduleQueue.AgentBase\bin\x64\kCura.ScheduleQueue.Core.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\Newtonsoft.Json.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\Renci.SshNet.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\SystemInterface.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\ZetaLongPaths.dll</Assembly>
+          <Assembly>Source\kCura.IntegrationPoints.Core\bin\x64\Relativity.Productions.Services.Interfaces.dll</Assembly>
         </Assemblies>
         <ResourceFiles />
         <CustomPages>
@@ -533,21 +533,21 @@
         <Destination>Applications\MyFirstProvider.rap</Destination>
         <ApplicationSchema>ApplicationsXML\myFirstProviderApplication.xml</ApplicationSchema>
         <Assemblies>
-          <Assembly>lib\kCura.Apps.Common.Config.dll</Assembly>
-          <Assembly>lib\kCura.Apps.Common.Data.dll</Assembly>
-          <Assembly>lib\kCura.Apps.Common.Utils.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Common.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Config.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Contracts.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Core.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Core.Contracts.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Data.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Domain.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.SourceProviderInstaller.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Synchronizers.RDO.dll</Assembly>
-          <Assembly>lib\kCura.ScheduleQueue.Core.dll</Assembly>
-          <Assembly>lib\Relativity.DataTransfer.MessageService.dll</Assembly>
-          <Assembly>lib\SystemInterface.dll</Assembly>
+          <Assembly>Source\Provider\bin\kCura.Apps.Common.Config.dll</Assembly>
+          <Assembly>Source\Provider\bin\kCura.Apps.Common.Data.dll</Assembly>
+          <Assembly>Source\Provider\bin\kCura.Apps.Common.Utils.dll</Assembly>
+          <Assembly>Source\Provider\bin\kCura.IntegrationPoints.Common.dll</Assembly>
+          <Assembly>Source\Provider\bin\kCura.IntegrationPoints.Config.dll</Assembly>
+          <Assembly>Source\Provider\bin\kCura.IntegrationPoints.Contracts.dll</Assembly>
+          <Assembly>Source\Provider\bin\kCura.IntegrationPoints.Core.dll</Assembly>
+          <Assembly>Source\Provider\bin\kCura.IntegrationPoints.Core.Contracts.dll</Assembly>
+          <Assembly>Source\Provider\bin\kCura.IntegrationPoints.Data.dll</Assembly>
+          <Assembly>Source\Provider\bin\kCura.IntegrationPoints.Domain.dll</Assembly>
+          <Assembly>Source\Provider\bin\kCura.IntegrationPoints.SourceProviderInstaller.dll</Assembly>
+          <Assembly>Source\Provider\bin\kCura.IntegrationPoints.Synchronizers.RDO.dll</Assembly>
+          <Assembly>Source\Provider\bin\kCura.ScheduleQueue.Core.dll</Assembly>
+          <Assembly>Source\Provider\bin\Relativity.DataTransfer.MessageService.dll</Assembly>
+          <Assembly>Source\Provider\bin\SystemInterface.dll</Assembly>
           <Assembly>Source\Provider\bin\Provider.dll</Assembly>
         </Assemblies>
         <ResourceFiles />
@@ -559,21 +559,21 @@
         <Destination>Applications\JsonLoader.rap</Destination>
         <ApplicationSchema>ApplicationsXML\jsonLoaderApplication.xml</ApplicationSchema>
         <Assemblies>
-          <Assembly>lib\kCura.Apps.Common.Config.dll</Assembly>
-          <Assembly>lib\kCura.Apps.Common.Data.dll</Assembly>
-          <Assembly>lib\kCura.Apps.Common.Utils.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Common.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Config.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Contracts.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Core.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Core.Contracts.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Data.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Domain.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.SourceProviderInstaller.dll</Assembly>
-          <Assembly>lib\kCura.IntegrationPoints.Synchronizers.RDO.dll</Assembly>
-          <Assembly>lib\kCura.ScheduleQueue.Core.dll</Assembly>
-          <Assembly>lib\Relativity.DataTransfer.MessageService.dll</Assembly>
-          <Assembly>lib\SystemInterface.dll</Assembly>
+          <Assembly>Source\JsonLoader\bin\kCura.Apps.Common.Config.dll</Assembly>
+          <Assembly>Source\JsonLoader\bin\kCura.Apps.Common.Data.dll</Assembly>
+          <Assembly>Source\JsonLoader\bin\kCura.Apps.Common.Utils.dll</Assembly>
+          <Assembly>Source\JsonLoader\bin\kCura.IntegrationPoints.Common.dll</Assembly>
+          <Assembly>Source\JsonLoader\bin\kCura.IntegrationPoints.Config.dll</Assembly>
+          <Assembly>Source\JsonLoader\bin\kCura.IntegrationPoints.Contracts.dll</Assembly>
+          <Assembly>Source\JsonLoader\bin\kCura.IntegrationPoints.Core.dll</Assembly>
+          <Assembly>Source\JsonLoader\bin\kCura.IntegrationPoints.Core.Contracts.dll</Assembly>
+          <Assembly>Source\JsonLoader\bin\kCura.IntegrationPoints.Data.dll</Assembly>
+          <Assembly>Source\JsonLoader\bin\kCura.IntegrationPoints.Domain.dll</Assembly>
+          <Assembly>Source\JsonLoader\bin\kCura.IntegrationPoints.SourceProviderInstaller.dll</Assembly>
+          <Assembly>Source\JsonLoader\bin\kCura.IntegrationPoints.Synchronizers.RDO.dll</Assembly>
+          <Assembly>Source\JsonLoader\bin\kCura.ScheduleQueue.Core.dll</Assembly>
+          <Assembly>Source\JsonLoader\bin\Relativity.DataTransfer.MessageService.dll</Assembly>
+          <Assembly>Source\JsonLoader\bin\SystemInterface.dll</Assembly>
           <Assembly>Source\JsonLoader\bin\JsonLoader.dll</Assembly>
           <Assembly>Source\JsonLoader\bin\Newtonsoft.Json.dll</Assembly>
         </Assemblies>
