--- a/Source/kCura.IntegrationPoints.ImportProvider.Parser/kCura.IntegrationPoints.ImportProvider.Parser.csproj
+++ b/Source/kCura.IntegrationPoints.ImportProvider.Parser/kCura.IntegrationPoints.ImportProvider.Parser.csproj
@@ -24,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <LangVersion>6</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
