REL-267074 Prepare RIP Sync repository - add empty script files

--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,9 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+# Ignore everything in BuildTools
+buildtools/*
+
+# But not these files...
+!buildtools/packages.config
