--- a/buildtools/packages.config
+++ b/buildtools/packages.config
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
-    <package id="kCura.PSBuildTools" version="0.4.0" />
+    <package id="psake" version="4.7.4" />
+    <package id="kCura.PSBuildTools" version="0.5.0" />
 </packages>
