Reverted app.config change.

--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -13,21 +13,21 @@
 		<add key="ServerBindingType" value="https" />
 		<!-- change to <add key="RelativityInstanceAddress" value="your_testvm.kcura.corp" />-->
 
-		<add key="RelativityInstanceAddress" value="il1ddml020wb001.kcura.corp" />
-		<add key="SQLServerAddress" value="IL1DDML020DB001\IL1DDML020DB001" />
+		<add key="RelativityInstanceAddress" value="localhost" />
+		<add key="SQLServerAddress" value="localhost\EDDSINSTANCE001" />
 
 		<!-- If empty, application uses the value of RelativityInstanceAddress -->
-		<add key="targetDbHost" value="IL1DDML020DB001.kcura.corp" />
-		<add key="RESTServerAddress" value="http://il1ddml020wb001.kcura.corp/Relativity.Rest/" />
+		<add key="targetDbHost" value="" />
+		<add key="RESTServerAddress" value="" />
 		<add key="RSAPIServerAddress" value="" />
 		
-		<add key="AdminUsername" value="adrian.krzysztofek@relativity.com" />
+		<add key="AdminUsername" value="relativity.admin@kcura.com" />
 		<add key="AdminPassword" value="Test1234!" />
 		<add key="relativityUserFirstName" value="Relativity" />
 		<add key="relativityUserLastName" value="Admin" />
 
 		<add key="SQLUsername" value="EDDSdbo" />
-		<add key="SQLPassword" value="MySecretPassword1!" />
+		<add key="SQLPassword" value="MySqlPassword123" />
 		<add key="connectionStringEDDS" value="data source={0}; initial catalog=EDDS;persist security info=False;user id={1};password={2}; workstation id={0};packet size=4096" />
 		<add key="connectionStringWorkspace" value="data source={1}; initial catalog=EDDS{0};persist security info=False;user id={2};password={3}; workstation id={1};packet size=4096" />		
 
