Correctin to nightly testsuite.

--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -56,6 +56,7 @@
 		<add key="LocalRAPFileLocation" value="..\Applications\RelativityIntegrationPoints.Auto.rap" />
 		<add key="JenkinsBuildUseIPRapFile" value="JenkinsUseIPRapFile" />
 		<add key="UseLegacyTemplateName" value="JenkinsUseLegacyTemplateNameInTests" />
+		<add key="CustomizedConfigurationOverridesLocation" value="S:\Sourcecode\RIP.Tests.Custom.config"/>
 
 		<!-- ========== UI tests ========== -->
 		<!-- Time of implicit wait for web element to be present on page, used by driver's Find(), [FindsBy], etc. -->
