REL-267091 Create script for running SonarQube analysis

--- a/buildtools/packages.config
+++ b/buildtools/packages.config
@@ -6,4 +6,5 @@
     <package id="JetBrains.dotCover.CommandLineTools" version="2018.2.3" />
     <package id="ConfigureAwaitChecker.v9" version="0.15.0" />
     <package id="NUnit.ConsoleRunner" version="3.9.0" />
+    <package id="MSBuild.SonarQube.Runner.Tool" version="4.3.1" />
 </packages>
