--- a/.gitignore
+++ b/.gitignore
@@ -338,5 +338,8 @@ buildtools/*
 # But not these files...
 !buildtools/packages.config
 
+# Sonar Scanner
+.sonarqube/*
+
 # Ignore vscode
 .vscode/*
