REL-270135 create sink for handling external call metric messages

--- a/Source/kCura.IntegrationPoints.Core.Tests/kCura.IntegrationPoints.Core.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Core.Tests/kCura.IntegrationPoints.Core.Tests.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Monitoring\Instrumentation\ExternalCallCompletedMessageTests.cs" />
     <Compile Include="Monitoring\Instrumentation\ExternalServiceInstrumentationTests.cs" />
     <Compile Include="Monitoring\Instrumentation\ExternalServiceSimpleInstrumentationTests.cs" />
+    <Compile Include="Monitoring\MessageSink\ExternalCalls\ExternalCallsSinkTests.cs" />
     <Compile Include="RelativitySourceRdo\RelativitySourceJobRdoInitializerTests.cs" />
     <Compile Include="RelativitySourceRdo\RelativitySourceRdoDocumentFieldTests.cs" />
     <Compile Include="RelativitySourceRdo\RelativitySourceRdoFieldsTests.cs" />
