REL-269612 use implemented instrumentation framework in ObjectManger

--- a/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
+++ b/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
@@ -69,6 +69,8 @@
     <Compile Include="Extensions\ObjectQueryResultSetExtensions.cs" />
     <Compile Include="Extensions\ResultSetExtensions.cs" />
     <Compile Include="Extensions\TaskExtension.cs" />
+    <Compile Include="Facades\Implementations\ObjectManagerFacade.cs" />
+    <Compile Include="Facades\IObjectManagerFacade.cs" />
     <Compile Include="Factories\Implementations\RelativityObjectManagerFactory.cs" />
     <Compile Include="Factories\IRelativityObjectManagerFactory.cs" />
     <Compile Include="Factories\IRSAPIServiceFactory.cs" />
@@ -217,11 +219,7 @@
     <Compile Include="IntegrationPointQuery.cs" />
     <Compile Include="IWorkspaceDBContext.cs" />
     <Compile Include="IObjectTypeQuery.cs" />
-    <Compile Include="IRSAPIService.cs">
-      <DependentUpon>IRSAPIService.tt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
+    <Compile Include="IRSAPIService.cs" />
     <Compile Include="Logging\SystemEventLoggingService.cs" />
     <Compile Include="Migrations\AddWebApiConfigValueMigration.cs" />
     <Compile Include="Migrations\IMigration.cs" />
@@ -243,11 +241,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
-    <Compile Include="RSAPIService.cs">
-      <DependentUpon>RSAPIService.tt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <Compile Include="GeneratedDTOs.Extended.cs">
       <DependentUpon>GeneratedDTOs.tt</DependentUpon>
     </Compile>
@@ -260,7 +253,7 @@
       <Link>AssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="RSAPIServiceAdminAccess.cs" />
-    <Compile Include="RSAPIServiceGetLibrary.cs" />
+    <Compile Include="RSAPIService.cs" />
     <Compile Include="SecretStore\DefaultSecretCatalogFactory.cs" />
     <Compile Include="SecretStore\ISecretCatalogFactory.cs" />
     <Compile Include="SecretStore\ISecretManager.cs" />
@@ -287,15 +280,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="IRSAPIService.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>IRSAPIService.cs</LastGenOutput>
-    </None>
     <None Include="paket.references" />
-    <None Include="RSAPIService.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>RSAPIService.cs</LastGenOutput>
-    </None>
     <None Include="GeneratedDTOs.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>GeneratedDTOs.cs</LastGenOutput>
@@ -335,6 +320,10 @@
     <Content Include="Resources\UpdateJobStatistics.sql" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\kCura.IntegrationPoints.Common\kCura.IntegrationPoints.Common.csproj">
+      <Project>{32bcb03b-4980-4434-9392-f72334e6e348}</Project>
+      <Name>kCura.IntegrationPoints.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\kCura.IntegrationPoints.Config\kCura.IntegrationPoints.Config.csproj">
       <Project>{def928b5-37ce-4bf3-b663-f0b8912c9c3f}</Project>
       <Name>kCura.IntegrationPoints.Config</Name>
