--- a/Source/kCura.IntegrationPoints.Common/kCura.IntegrationPoints.Common.csproj
+++ b/Source/kCura.IntegrationPoints.Common/kCura.IntegrationPoints.Common.csproj
@@ -47,8 +47,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Monitoring\Instrumentation\ExternalServiceInstrumentation.cs" />
+    <Compile Include="Monitoring\Instrumentation\ExternalServiceInstrumentationProviderWithoutJobContext.cs" />
+    <Compile Include="Monitoring\Instrumentation\ExternalServiceLogsInstrumentation.cs" />
+    <Compile Include="Monitoring\Instrumentation\ExternalServiceSimpleInstrumentation.cs" />
     <Compile Include="Monitoring\Instrumentation\IExternalServiceSimpleInstrumentation.cs" />
     <Compile Include="Monitoring\Instrumentation\IExternalServiceInstrumentationProvider.cs" />
+    <Compile Include="Monitoring\Instrumentation\Model\ExternalCallCompletedMessage.cs" />
+    <Compile Include="Monitoring\Instrumentation\Model\InstrumentationJobContext.cs" />
+    <Compile Include="Monitoring\Instrumentation\Model\InstrumentationServiceCallContext.cs" />
     <Compile Include="Monitoring\UnitsOfMeasureConstants.cs" />
     <Content Include="LICENSE.txt">
       <Paket>True</Paket>
