Replaced calls to QueryFieldLookup from Relativity.Core with calls to QueryFieldLookup from Relativity.Data in QueryFieldLookupRepository

--- a/Source/kCura.IntegrationPoints.Data.Tests/kCura.IntegrationPoints.Data.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Data.Tests/kCura.IntegrationPoints.Data.Tests.csproj
@@ -46,6 +46,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="kCura, Version=10.1.33.3, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\kCura\lib\net462\kCura.dll</HintPath>
+    </Reference>
     <Reference Include="Relativity.Core, Version=10.0.85.14, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\RelativityCore\lib\net462\Relativity.Core.dll</HintPath>
@@ -151,7 +155,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent></PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <Import Project="..\..\.paket\paket.targets" />
   <ItemGroup>
