added kCura.IntegrationPoints.Common.dll to sdk nuget package

--- a/DevelopmentScripts/NuGet/IntegrationPoints.SDK.nuspec
+++ b/DevelopmentScripts/NuGet/IntegrationPoints.SDK.nuspec
@@ -17,6 +17,7 @@
     </dependencies>
   </metadata>
   <files>
+    <file src="..\..\lib\UnitTests\kCura.IntegrationPoints.Common.dll" target="lib" />
     <file src="..\..\lib\UnitTests\kCura.IntegrationPoints.Config.dll" target="lib" />
     <file src="..\..\lib\UnitTests\kCura.IntegrationPoints.Contracts.dll" target="lib" />
     <file src="..\..\lib\UnitTests\kCura.IntegrationPoints.Core.dll" target="lib" />
