Fix for FTP and LDAP tests.

--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-B.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-B.config
@@ -5,8 +5,8 @@
 	</configSections>
 	<appSettings>
 		<add key="ProtocolVersion" value="https" />
-		<add key="RelativityInstanceAddress" value="regression-b-services.r1.kcura.com" />		
-		<add key="RelativityWebAddress" value="regression-b.r1.kcura.com" />
+		<add key="RelativityInstanceAddress" value="reg-b-services.r1.kcura.com" />		
+		<add key="RelativityWebAddress" value="reg-b.r1.kcura.com" />
 
 		<add key="AdminUsername" value="your.name@relativity.com" />
 		<add key="AdminPassword" value="Test1234!" />
