--- a/Source/Relativity.Sync.Tests.Unit/Relativity.Sync.Tests.Unit.csproj
+++ b/Source/Relativity.Sync.Tests.Unit/Relativity.Sync.Tests.Unit.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>net462</TargetFramework>
     <OutputPath>bin\</OutputPath>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningLevel>4</WarningLevel>
@@ -10,5 +10,8 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <Import Project="..\..\scripts\Build.AssemblyInfo.targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\Relativity.Sync\Relativity.Sync.csproj" />
+  </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
