REL-277370 Create Sync workflow
* Add ICommand
* Add IExecutionConstrains
* Add IExecutor

--- a/Source/Relativity.Sync.Tests.Unit/Relativity.Sync.Tests.Unit.csproj
+++ b/Source/Relativity.Sync.Tests.Unit/Relativity.Sync.Tests.Unit.csproj
@@ -13,5 +13,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Relativity.Sync\Relativity.Sync.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
