--- a/Source/Relativity.Sync.Tests.Integration/Relativity.Sync.Tests.Integration.csproj
+++ b/Source/Relativity.Sync.Tests.Integration/Relativity.Sync.Tests.Integration.csproj
@@ -10,5 +10,9 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <Import Project="..\..\scripts\Build.AssemblyInfo.targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\Relativity.Sync.Tests.Common\Relativity.Sync.Tests.Common.csproj" />
+    <ProjectReference Include="..\Relativity.Sync\Relativity.Sync.csproj" />
+  </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
