--- a/Source/Relativity.Sync/Relativity.Sync.csproj
+++ b/Source/Relativity.Sync/Relativity.Sync.csproj
@@ -16,6 +16,9 @@
       <_Parameter1>Relativity.Sync.Tests.Unit</_Parameter1>
     </AssemblyAttribute>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>Relativity.Sync.Tests.Integration</_Parameter1>
+    </AssemblyAttribute>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
       <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
