Modified build scripts to get rid of BuildHelper

--- a/Source/kCura.IntegrationPoints.RelativitySync/kCura.IntegrationPoints.RelativitySync.csproj
+++ b/Source/kCura.IntegrationPoints.RelativitySync/kCura.IntegrationPoints.RelativitySync.csproj
@@ -8,6 +8,7 @@
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\..\Version\AssemblyInfo.cs" Link="Properties\AssemblyInfo.cs" />
